--- a/views/login.ejs
+++ b/views/login.ejs
@@ -14,7 +14,7 @@
           <div id="password-container">
             <input type="password" id="password" name="password" placeholder="Password" required>
           </div>
-          <div id="show-password-container">
+          <div id="show-password-container-login">
             <div>
               <input type="checkbox" id="show-password">
               <label for="show-password">Show password</label>
