--- a/views/profile.ejs
+++ b/views/profile.ejs
@@ -5,8 +5,7 @@
     <div class="subcontainer">
       <div class="content-padding">
         <div class="title">
-          <h2>Hello, <%= user.email %>
-          </h2>
+          <h2>Hello, <%= user.email %> </h2>
         </div>
       </div>
     </div>
