--- a/views/admin.ejs
+++ b/views/admin.ejs
@@ -16,9 +16,9 @@
       <div class="db-search">
         <div style="width:fit-content; display: flex; gap: 10px;">
           <a href="/admin" class="view"><i class="fa-solid fa-eye"></i> View Users</a>
-          <form>
+          <!-- <form> -->
             <a href="/add-user" class="edit"><i class="fa-solid fa-user-plus"></i> Add User</a>
-          </form>
+          <!-- </form> -->
         </div>
       </div>
       <br>
