--- a/views/password-reset-update.ejs
+++ b/views/password-reset-update.ejs
@@ -35,15 +35,13 @@
                   <%= (allParsedErrors.errors[i].msg) %>
                 </div>
                 <% } %>
-                  <% } %>
+            <% } %>
           </form>
           <% } else if (typeof token_success !="undefined" && !token_success) { %>
             <div class="title">
               <h2 style="font-size: 2rem;">Error</h2>
               <br>
-              <p>
-                <%= message %>
-              </p>
+              <p> <%= message %> </p>
             </div>
           <% } %>
       </div>
