--- a/views/account-verification.ejs
+++ b/views/account-verification.ejs
@@ -7,9 +7,7 @@
           <div class="title">
             <h2>Account verification</h2>
             <br>
-            <p>An email has been sent to your email address containing an activation link. Please click on the link to activate
-              your account. If you do not click the link your account will remain inactive and you will not receive further
-              emails. If you do not receive the email within a few minutes, please check your spam folder.</p>
+            <p>An email has been sent to your email address containing an activation link. Please click on the link to activate your account. If you do not click the link your account will remain inactive and you will not receive further emails. If you do not receive the email within a few minutes, please check your spam folder.</p>
           </div>
         </div>
       </div>
