--- a/views/login.ejs
+++ b/views/login.ejs
@@ -9,10 +9,10 @@
             <h2>Login</h2>
           </div>
           <div>
-            <input type="text" id="email" name="email" placeholder="Email" required>
+            <input type="text" id="email" name="email" placeholder="Email" maxlength="100" required>
           </div>
           <div id="password-container">
-            <input type="password" id="password" name="password" placeholder="Password" required>
+            <input type="password" id="password" name="password" placeholder="Password" maxlength="60" required>
           </div>
           <div id="show-password-container-login">
             <div>
