--- a/views/password-reset.ejs
+++ b/views/password-reset.ejs
@@ -4,7 +4,7 @@
     <div class="container">
       <div class="subcontainer">
         <div class="content-padding">
-          <form action="/auth/reset-email" id="password-request-form" method="POST">
+          <form action="/auth/password-reset" id="password-request-form" method="POST">
             <div class="title">
               <h2>Password reset</h2>
               <br>
@@ -19,9 +19,7 @@
             </div>
             <% if (typeof success !="undefined" && !success) { %>
               <div class="alert-message">
-                <p>
-                  <%= message %>
-                </p>
+                <p> <%= message %> </p>
               </div>
               <% } %>
           </form>
