--- a/views/register.ejs
+++ b/views/register.ejs
@@ -9,16 +9,16 @@
             <h2>Register</h2>
           </div>
           <div>
-            <input type="text" id="first-name" name="first_name" maxlength="100" placeholder="First name"
+            <input type="text" id="first-name" name="first_name" maxlength="25" placeholder="First name"
               value="<%= typeof first_name != 'undefined' ? first_name : '' %>" required>
           </div>
           <div>
-            <input type="text" id="last-name" name="last_name" maxlength="100" placeholder="Last name"
+            <input type="text" id="last-name" name="last_name" maxlength="25" placeholder="Last name"
               value="<%= typeof last_name != 'undefined' ? last_name : '' %>" required>
           </div>
           <div>
             <input type="email" id="email" name="email" maxlength="100" placeholder="Email"
-              value="<%= typeof email != 'undefined' ? email : '' %>" required>
+              value="<%= typeof email != 'undefined' ? email : '' %>" maxlength="100" required>
           </div>
           <div id="password-container">
             <input type="password" id="password" name="password" maxlength="60" placeholder="Password"
